--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 	<title>Manuel's Profile 😀</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<div>
+<div class="container">
 	<body>
 		<h1>Hello, I am Manuel! 😀</h1>
 		<img src="images/0.jfif" alt="A picture of Manuel">
 		<p>Professional coder, professional man 💪</p>
 		<a href="https://www.netflix.com" class="btn-blue" target="_blank">My favorite website ♟</a>
 </div>
-<div>
+<div class="container">
 	<h2>My favorite food 🤔</h2>
 	<p>Pizza is a passion of mine 🍕</p>
 	<h2>My favorite video game ⚽️</h2>
